--- a/styles/animations.css
+++ b/styles/animations.css
@@ -12,3 +12,41 @@
 
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
+
+
+@keyframes focusmenu {
+    0% {
+        inset-inline-start: -20px;
+    }
+
+    100% {
+        inset-inline-start: -16px;
+    }
+    
+}
+
+@keyframes scale-animation {
+    0% {
+        scale: 1.0;
+    }
+
+    50% {
+        scale: 1.5;
+    }
+
+    100% {
+        scale: 1.0;
+    }
+}
+
+@keyframes sparks-animation {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
