--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,10 @@
 }
 
 body {
-  margin: 0;
+  margin: 0 auto;
+  font-family: "Inter-Variable", sans-serif;
+  min-inline-size: 375px;
+  max-inline-size: 1440px;
 }
 
 h1,
