--- a/styles/style.css
+++ b/styles/style.css
@@ -17,4 +17,444 @@
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  padding: 102px 0;
+  font-family: var(--main-font);
+  font-variation-settings: "wght" var(--weigth-text);
+  background-color: var(--bg-color);
+  color: var(--accent-color);
+  background-image: var(--bg-gradient);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+.content-section {
+  margin: 0 auto;
+  max-inline-size: 700px;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto 100px;
+  background-color: var(--bg-color);
+  padding-block-start: clamp(7.5rem, 7.148rem + 1.502vw, 8.5rem);
+  padding-block-end: 6px;
+  border: var(--border);
+}
+
+.logo {
+  font-size: clamp(3.0625rem, 2.723rem + 1.4884vw, 4.0625rem);
+  line-height: 49px;
+  font-family: var(--accent-font);
+}
+
+.closing-tag {
+  font-size: clamp(0.875rem, 0.684rem + 0.8372vw, 1.4375rem);
+  font-family: var(--accent-font);
+  line-height: 14px;
+  margin-block-start: 20px;
+  text-transform: uppercase;
+  margin-block-end: 25px;
+}
+
+.theme-menu__button {
+  font-family: var(--accent-font);
+  font-size: 14px;
+  line-height: 14px;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.theme-menu__button:hover {
+  color: var(--color-transparent);
+}
+
+.theme-menu__button::after {
+  content: "";
+  position: relative;
+  display: block;
+  background-color: var(--color-transparent);
+  transition: var(--transform-time);
+  transition-duration: 0.3s;
+  transform: scaleX(0);
+  transform-origin: left center;
+  block-size: 3px;
+  inline-size: 100%;
+  inset-block-end: -3px;
+  inset-inline-start: 0;
+}
+
+.theme-menu__button:focus {
+  outline: none;
+  opacity: 0.6;
+}
+
+.theme-menu__button:focus-visible::after {
+  transform: scaleX(1);
+  transition-duration: 0.3s;
+}
+
+.theme-menu__button:disabled {
+  position: relative;
+  color: var(--color-transparent);
+  transition: color var(--transform-time);
+  transition-timing-function: var(--transition-function);
+  pointer-events: none;
+}
+
+.theme-menu__button:disabled::before {
+  content: "▶";
+  position: absolute;
+  color: var(--theme-light-color-transparent);
+  animation: focusmenu 0.5s infinite ease-in-out reverse;
+  inset-inline-start: -20px;
+}
+
+.theme-menu__list {
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+  margin-block-end: 16px;
+  align-items: center;
+}
+
+.main__block {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+
+.card {
+  border: var(--border);
+  background-color: var(--bg-color);
+}
+
+.main__title {
+  background-color: var(--bg-color);
+  font-family: var(--main-font);
+  font-size: 18px;
+  font-weight: var(--weigth-heading);
+  line-height: 21.78px;
+  padding: 4px 10px 2px 10px;
+  font-variation-settings: "wght" var(--weigth-heading);
+}
+
+.content-text {
+  font-family: var(--main-font);
+  font-size: 18px;
+  line-height: 21px;
+  margin: 21px 29px 27px 25px;
+}
+
+.card__like-button {
+  inline-size: 130px;
+  block-size: 38px;
+  display: flex;
+  flex-direction: row;
+  column-gap: 12px;
+  align-items: center;
+  background-color: transparent;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.normal-button {
+  position: relative;
+  border: var(--border);
+  transition: box-shadow var(--transform-time);
+  transition-timing-function: var(--transition-function);
+}
+
+.normal-button:focus {
+  outline: none;
+}
+
+.normal-button:focus-visible {
+  box-shadow: 2px 2px 0px 0px var(--accent-color);
+}
+
+.normal-button::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  z-index: 1;
+  background-color: var(--accent-color);
+  transition: transform 0.5s ease-in-out;
+  transform: scaleX(0);
+  transform-origin: left;
+}
+
+.normal-button:hover::before {
+  transform: scaleX(1);
+}
+
+.button__text {
+  position: relative;
+  z-index: 2;
+  display: block;
+  color: var(--font-color);
+  mix-blend-mode: difference;
+  font-family: var(--accent-font);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 12.6px;
+}
+
+.button {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  margin-inline-end: 25px;
+  margin-block-end: 25px;
+}
+
+.card__icon-button {
+  background-color: transparent;
+  border: none;
+  margin-inline-end: 6px;
+  block-size: 38px;
+  cursor: pointer;
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.card__icon-button:focus-visible {
+  border: var(--border);
+  transform: var(--transform-time);
+  transform: var(--transition-function);
+}
+
+.image__car {
+  inline-size: 100%;
+  min-block-size: 375px;
+  border-bottom: var(--border);
+  border-top: var(--border);
+  object-fit: cover;
+  object-position: center;
+}
+
+.filter-brightness {
+  filter: brightness(200%);
+}
+
+.filter-contrast {
+  filter: contrast(150%);
+}
+
+.filter-opacity {
+  filter: opacity(0.8);
+}
+
+.filter-saturate {
+  filter: saturate(160%);
+}
+
+.filter-sepia {
+  filter: sepia(80%);
+}
+
+.filter-blur {
+  filter: blur(0.3rem);
+}
+
+.filter-mass {
+  filter: sepia(1) contrast(2) brightness(200%);
+}
+
+.card__image-text {
+  position: relative;
+  float: right;
+  height: 0;
+  font-family: var(--accent-font);
+  font-size: 14px;
+  font-variation-settings: var(--weigth-text);
+  line-height: 14px;
+  top: 25px;
+  right: 11px;
+  opacity: 50%;
+  mix-blend-mode: hard-light;
+  text-shadow: -1px 0 var(--bg-color), 0 1px var(--bg-color), 1px 0 var(--bg-color), 0 -1px var(--bg-color);
+}
+
+@supports (-webkit-text-stroke: 1px var(--bg-color)) {
+  .card__image-text {
+      text-shadow: none;
+      -webkit-text-stroke: 1px var(--bg-color);
+  }
+}
+
+.sparks {
+  opacity: 0;
+}
+
+.contour {
+  fill: var(--accent-color);
+  transition: 0.1s;
+}
+
+.core {
+  fill: transparent;
+  transition: fill 0.3s 0.03s linear;
+}
+
+.like-icon:hover .core {
+  fill: var(--accent-color);
+  transition: fill 0.3s 0s linear;
+}
+
+.main-body {
+  fill: transparent;
+  transition: fill 0.3s 0 linear;
+}
+
+.like-icon:hover .main-body {
+  fill: var(--accent-color);
+  transition: fill 0.3s 0.05s linear;
+}
+
+.like-icon:active .core {
+  fill: var(--fill-heart-sparks);
+  transition: fill 0.3s 0s linear;
+}
+
+.like-icon:active .main-body {
+  fill: var(--fill-heart-sparks);
+  transition: fill 0.3s 0.05s linear;
+}
+
+.like-icon.is-liked:active .core {
+  fill: var(--fill-heart-sparks);
+  transition: fill 0.3s 0s linear;
+}
+
+.like-icon.is-liked:active .main-body {
+  fill: var(--fill-heart-sparks);
+  transition: fill 0.3s 0.05s linear;
+}
+
+.like-icon.is-liked .core {
+  fill: var(--fill-heart-sparks);
+  transition-delay: 0s;
+  transition-duration: 0.3s;
+}
+
+.like-icon.is-liked .main-body {
+  fill: var(--fill-heart-sparks);
+  transition-delay: 0.05s;
+  transition-duration: 0.3s;
+}
+
+.like-icon.is-liked .contour {
+  fill: var(--fill-heart-sparks);
+  transition-delay: 0.06s;
+  transition-duration: 0.3s;
+}
+
+.is-liked .heart {
+  transform-origin: center;
+  animation: scale-animation 0.3s ease-in 0.1s alternate;
+}
+
+.like-icon.is-liked .sparks {
+  animation: sparks-animation 0.3s ease-in 0.3s;
+}
+
+.save {
+  margin: 52px auto 0 auto;
+  background-color: var(--bg-color);
+  border: var(--border);
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-block-size: 84px;
+  min-inline-size: 306px;
+}
+
+.save:focus {
+  outline: none;
+}
+
+.save:focus-visible {
+  border: var(--border);
+  box-shadow: 2px 2px 0px 0px var(--accent-color);
+}
+
+.save__text {
+  font-family: var(--accent-font);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 12.6px;
+  padding-block-end: 15px;
+}
+
+.footer-floppy {
+  padding-block-start: 15px;
+  color: var(--accent-color);
+}
+
+dialog[open] {
+  display: grid;
+  grid-template-rows: auto auto;
+  gap: 30px;
+  padding: 0;
+  max-inline-size: 341px;
+  min-block-size: 63px;
+  border: var(--border);
+  background-color: var(--bg-color);
+  overflow: hidden;
+}
+
+.dialog-window {
+  display: grid;
+  grid-template-columns: max-content 1fr;
+  margin: 30px 42px 0 42px;
+  column-gap: 20px;
+  align-items: center;
+}
+
+.window-text {
+  font-family: var(--accent-font);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  text-align: left;
+  text-transform: uppercase;
+  min-inline-size: 198px;
+  color: var(--accent-color);
+}
+
+.window-floppy {
+  max-block-size: 39px;
+  color: var(--accent-color);
+}
+
+.window-ok {
+  background-color: var(--bg-color);
+  max-inline-size: 257px;
+  min-block-size: 38px;
+  border: var(--border);
+  margin: 0 42px 30px 42px;
+  text-transform: uppercase;
+  cursor: pointer;
+  color: var(--accent-color);
+}
+
+.window-buttonok {
+  font-family: var(--accent-font);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 12.6px;
+  text-align: left;
+}
+
+dialog::backdrop {
+  background-color: rgb(0 0 0 / 0.75);
 }
