--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,62 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+
+:root.theme-light  {
+    --weigth-text: 400;
+    --weigth-heading: 700;
+    --font-color: #fff;
+    --bg-color: #FFFFFF;
+    --accent-color: #000000;
+    --border: 2px solid var(--accent-color, #000000);
+    --color-transparent: rgb(0 0 0 / 60%);
+    --transform-time: 0.3s;
+    --fill-heart-sparks: rgba(255, 0, 0, 1);
+    --transition-function: ease;
+    --bg-gradient: repeating-linear-gradient(
+        to left,
+        #d3d3d3 0,
+        #d3d3d3 2px,
+        transparent 2px,
+        transparent 4px
+      ),
+      repeating-linear-gradient(
+        to top,
+        #d3d3d3 0,
+        #d3d3d3 2px,
+        transparent 2px,
+        transparent 4px
+      ),
+       var(--bg-gradient-color);
+      --bg-gradient-color: linear-gradient(180deg, #E7E7E7 0%, #1A1A1A 100%);
+}
+
+
+:root.theme-dark {
+    --weigth-text: 465;
+    --weigth-heading: 785;
+    --font-color: rgba(0, 204, 20, 1);
+    --bg-color: #000000;
+    --color-transparent: rgb(0 204 20 / 60%);
+    --accent-color: #00CC14;
+    --transform-time: 0.3s;
+    --transition-function: ease;
+    --fill-heart-sparks: rgba(255, 0, 0, 1);
+    --border: 2px solid var(--accent-color, #00CC14);
+    --bg-gradient: repeating-linear-gradient(
+        to left,
+        #000 0,
+        #000 2px,
+        transparent 2px,
+        transparent 4px
+      ),
+      repeating-linear-gradient(
+        to top,
+        #000 0,
+        #000 2px,
+        transparent 2px,
+        transparent 4px
+      ),
+       var(--bg-gradient-color);
+      --bg-gradient-color: linear-gradient(180deg, #007f0c 0%, #004306 100%);
+}
