--- a/styles/style.css
+++ b/styles/style.css
@@ -304,7 +304,6 @@
 
 @media (min-width: 380px) {
   .label {
-      position: absolute;
       margin-block-start: 27px;
       right: 25px;
   }
@@ -331,7 +330,7 @@
 
 .main-body {
   fill: transparent;
-  transition: fill 0.3s 0 linear;
+  transition: fill 0.3s 0 linear ;
 }
 
 .like-icon:hover .main-body {
@@ -453,15 +452,19 @@
 
 @media (width > 380px) {
   .save {
-      max-inline-size: 335px;
+      min-inline-size: 339px;
       flex-direction: row;
-      display: flex;
-      align-items: flex-end;
       min-block-size: 55px;
   }
+}
+  @media (width > 380px) {
+    .save__text {
+      padding: 0;
+    
+    }
 
   .footer-floppy {
-      margin: 0 2px 0 19px;
+      margin: 0 2px 0 13px;
       block-size: 20px;
   }
 }
