--- a/styles/themes.css
+++ b/styles/themes.css
@@ -5,6 +5,8 @@
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
 
+@media (prefers-color-scheme: light)
+{
 :root.theme-light  {
     --weigth-text: 400;
     --weigth-heading: 700;
@@ -33,8 +35,10 @@
        var(--bg-gradient-color);
       --bg-gradient-color: linear-gradient(180deg, #E7E7E7 0%, #1A1A1A 100%);
 }
+}
 
-
+@media (prefers-color-scheme: dark) 
+{
 :root.theme-dark {
     --weigth-text: 465;
     --weigth-heading: 785;
@@ -62,4 +66,5 @@
       ),
        var(--bg-gradient-color);
       --bg-gradient-color: linear-gradient(180deg, #007f0c 0%, #004306 100%);
+}
 }
